# ray-test

./: .gitignore  Dockerfile  README.md  pyproject.toml
.claude/: settings.local.json
callbacks/: __init__.py  video_recorder.py
environments/: __init__.py  hide_and_seek.py
kubernetes/: monitor-job.sh  rayjob.yaml  submit-job.sh
scripts/: evaluate.py  quick_start.py  train.py
